tests/parsing/smtlib/v2.6/errors/024_var_binding_bad_term_1.expected
File "tests/parsing/smtlib/v2.6/errors/024_var_binding_bad_term_1.smt2", line 2, character 17-18:
2 | (assert (let ((x _)) (= x 42)))
                     ^
Error while parsing a variable binding, read the reserved word '_',
      but expected a term.
